// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BurgerBuilder /> should render BurgerBuilder 1`] = `
Array [
  <div
    className="Modal"
    style={
      Object {
        "opacity": "0",
        "transform": "translateY(-100vh)",
      }
    }
  >
    <div
      className="Loader"
    >
      Loading...
    </div>
  </div>,
  <div
    className="Loader"
  >
    Loading...
  </div>,
]
`;

exports[`<BurgerBuilder /> should render BurgerBuilder 2`] = `
Array [
  <div
    className="Modal"
    style={
      Object {
        "opacity": "0",
        "transform": "translateY(-100vh)",
      }
    }
  />,
  <p>
    Ingredients can't be loaded!
  </p>,
]
`;

exports[`<BurgerBuilder /> should render the connected BurgerBuilder with default state 1`] = `
Array [
  <div
    className="Modal"
    style={
      Object {
        "opacity": "0",
        "transform": "translateY(-100vh)",
      }
    }
  />,
  <div
    className="Modal"
    style={
      Object {
        "opacity": "0",
        "transform": "translateY(-100vh)",
      }
    }
  >
    <h3>
      Your Order
    </h3>
    <p>
      A delicious burger with the following ingredients:
    </p>
    <ul>
      <li>
        <span
          style={
            Object {
              "textTransform": "capitalize",
            }
          }
        >
          salad
        </span>
        : 
        1
      </li>
      <li>
        <span
          style={
            Object {
              "textTransform": "capitalize",
            }
          }
        >
          bacon
        </span>
        : 
        2
      </li>
      <li>
        <span
          style={
            Object {
              "textTransform": "capitalize",
            }
          }
        >
          cheese
        </span>
        : 
        2
      </li>
      <li>
        <span
          style={
            Object {
              "textTransform": "capitalize",
            }
          }
        >
          meat
        </span>
        : 
        3
      </li>
    </ul>
    <p>
      <strong>
        Total price: 
        4.00
      </strong>
    </p>
    <p>
      Continue to checkout?
    </p>
    <button
      className="Button Danger"
      onClick={[Function]}
    >
      CANCEL
    </button>
    <button
      className="Button Success"
      onClick={[Function]}
    >
      CONTINUE
    </button>
  </div>,
  <div
    className="Burger"
  >
    <div
      className="BreadTop"
    >
      <div
        className="Seeds1"
      />
      <div
        className="Seeds2"
      />
    </div>
    <div
      className="Salad"
    />
    <div
      className="Bacon"
    />
    <div
      className="Bacon"
    />
    <div
      className="Cheese"
    />
    <div
      className="Cheese"
    />
    <div
      className="Meat"
    />
    <div
      className="Meat"
    />
    <div
      className="Meat"
    />
    <div
      className="BreadBottom"
    />
  </div>,
  <div
    className="BuildControls"
  >
    <p>
      Current Price: 
      <strong>
        4.00
      </strong>
    </p>
    <div
      className="BuildControl"
    >
      <div
        className="Label"
      >
        Salad
      </div>
      <button
        className="Less"
        disabled={false}
        onClick={[Function]}
      >
        Less
      </button>
      <button
        className="More"
        onClick={[Function]}
      >
        More
      </button>
    </div>
    <div
      className="BuildControl"
    >
      <div
        className="Label"
      >
        Bacon
      </div>
      <button
        className="Less"
        disabled={false}
        onClick={[Function]}
      >
        Less
      </button>
      <button
        className="More"
        onClick={[Function]}
      >
        More
      </button>
    </div>
    <div
      className="BuildControl"
    >
      <div
        className="Label"
      >
        Cheese
      </div>
      <button
        className="Less"
        disabled={false}
        onClick={[Function]}
      >
        Less
      </button>
      <button
        className="More"
        onClick={[Function]}
      >
        More
      </button>
    </div>
    <div
      className="BuildControl"
    >
      <div
        className="Label"
      >
        Meat
      </div>
      <button
        className="Less"
        disabled={false}
        onClick={[Function]}
      >
        Less
      </button>
      <button
        className="More"
        onClick={[Function]}
      >
        More
      </button>
    </div>
    <button
      className="OrderButton"
      disabled={false}
      onClick={[Function]}
    >
      ORDER NOW
    </button>
  </div>,
]
`;
